--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,14 @@ img {
     padding: 20px;
 }
 
+table {
+    border: 1px solid #228CDB;
+}
+
+td {
+    text-align: center;
+}
+
 #pog{
     width: fit-content;
     margin: auto;
